// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TileReferenceModel can build a reference to a tile with the default specifications 1`] = `
TileReferenceModel {
  "direction": "right",
  "id": "id-0",
  "ratio": 1,
  "type": "straight-tile",
}
`;

exports[`TileReferenceModel can build a reference to a tile with the given direction 1`] = `
TileReferenceModel {
  "direction": "left",
  "id": "id-2",
  "ratio": 1,
  "type": "straight-tile",
}
`;

exports[`TileReferenceModel can build a reference to a tile with the given ratio 1`] = `
TileReferenceModel {
  "direction": "left",
  "id": "id-3",
  "ratio": 2,
  "type": "straight-tile",
}
`;

exports[`TileReferenceModel can build a reference to a tile with the given type 1`] = `
TileReferenceModel {
  "direction": "right",
  "id": "id-1",
  "ratio": 1,
  "type": "straight-tile",
}
`;

exports[`TileReferenceModel can build the model for a curved tile 1`] = `
CurvedTileModel {
  "direction": "right",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`TileReferenceModel can build the model for a curved tile enlarged 1`] = `
CurvedTileEnlargedModel {
  "direction": "right",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`TileReferenceModel can build the model for a straight tile 1`] = `
StraightTileModel {
  "direction": "right",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;
